kubernetes/post-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-deployment
  namespace: default
  labels:
    app: post-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
    # ImagePullSecrets is required to pull images from a private registry like Azure Container Registry
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: post-service
        image: akshayregistry.azurecr.io/post-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 10
          periodSeconds: 10
